[gd_scene load_steps=2 format=3 uid="uid://dabt2pphe3m0b"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_rq7tt"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_rq7tt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.67451, 0.67451, 0.67451, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBox" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MenuBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/MenuBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Unnamed Game"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuBox/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/MenuBox/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/MenuBox/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/MenuBox/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"
